--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
   "name": "app",
-  "homepage": "https://caryganeshj.github.io/sabdesis-v3/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
-
+    "preview": "vite preview"
   },
   "dependencies": {
     "react-dom": "^19.2.0",
