--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "sabdesis-portal",
+  "homepage": "https://caryganeshj.github.io/sabdesis-v3/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
